--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,114 @@
 header {
-    padding: 20px;
+  padding: 20px;
+  width: 100%;
+  height: 10%;
 }
 
 .header_container {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: auto;
+  grid-gap: 10px;
+}
+
+.header_container .header_menu {
+  font-weight: 700;
+  color: #4e4e4e;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.header_container input {
+  grid-column: 3;
+  min-width: 327px;
+  max-width: 330px;
+  height: 46px;
+  border-radius: 40px;
+  border: none;
+  box-shadow: 0 0 2em rgba(75, 73, 73, 0.418);
+  padding-left: 35px;
+  background: url(/img/icones/search_icon\ 1.png) no-repeat;
+  background-size: 30px;
+  background-position-x: 8px;
+  background-position-y: 8px;
+  margin-top: 7%;
+}
+
+.header_container input:hover {
+    border: 1px solid #4e4e4e;
+}
+
+.header_container ::-webkit-input-placeholder {
+  color: rgb(177, 176, 176);
+}
+
+.header_container .header_busca {
+  grid-column: 3;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.header_container .link_inicio {
+  grid-column: 6;
+}
+
+.header_container .link_inicio img {
+  height: 85px;
+}
+
+.header_container .city_climate {
+  font-size: 13px;
+  font-weight: 700;
+  color: #4e4e4e;
+  grid-column: 10;
+  min-width: 199px;
+  max-width: 200px;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.header_container .city_climate .previsao {
+  display: flex;
+  gap: 10px;
+}
+
+.header_container .city_climate .previsao p:nth-child(1) {
+  color: rgb(185, 32, 109);
+}
+
+.header_container .city_climate .previsao p:nth-child(2) {
+  color: rgb(80, 80, 202);
+}
+
+.header_container .options_users {
+  grid-column: 12;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.header_container .options_users .arrow-options {
+  margin-left: 1em;
+  height: 29px;
+  top: -9px;
+  position: relative;
+}
+.header_container .options_users .sino-options {
+  min-height: 30px;
+}
+
+.header_container .options_users .image-user img {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
 }
