--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 footer {
     background-color: #4D4C4C;
-    position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
     right: 0;
