--- a/css/header.css
+++ b/css/header.css
@@ -28,7 +28,7 @@ header {
   border: none;
   box-shadow: 0 0 2em rgba(75, 73, 73, 0.418);
   padding-left: 35px;
-  background: url(/img/icones/search_icon\ 1.png) no-repeat;
+  background: url(../img/icones/search_icon\ 1.png) no-repeat;
   background-size: 30px;
   background-position-x: 8px;
   background-position-y: 8px;
@@ -81,7 +81,7 @@ header {
 }
 
 .header_container .city_climate .previsao p:nth-child(1) {
-  color: rgb(185, 32, 109);
+  color: #b8023f;
 }
 
 .header_container .city_climate .previsao p:nth-child(2) {
