--- a/css/destaque.css
+++ b/css/destaque.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-auto-rows: auto;
+  padding-bottom: 2%;
 }
 
 
@@ -42,17 +43,17 @@
   flex-direction: column;
   justify-content: space-between;
   gap: 10px;
-  position: relative;
-  top: -52%;
-    left: 50%;
-  width: 50%;
-  height: 50%;
+  position: absolute;
+    top: 87%;
+    left: 27%;
+    width: 23%;
+    height: 80%;
 }
 
 .destaque_content .carrossel_destaque .carrossel_text_content{
     display: flex;
-        flex-direction: column;
-        gap: 10px;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .destaque_content .carrossel_destaque p {
