--- a/css/home.css
+++ b/css/home.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 } 
 
+body {
+    background-color: rgb(235, 235, 235);
+}
+
 .container {
     font-family: 'Nunito Sans', sans-serif;
     padding: 20px;
